--- a/index.html
+++ b/index.html
@@ -39,29 +39,29 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/index/"
+            <a class="nav-link main-nav__list__item__link" href="/index.html"
               >Home</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/tarot/"
+            <a class="nav-link main-nav__list__item__link" href="./tarot/"
               >tarot</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/astrologia/"
+            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
             <a
               class="nav-link main-nav__list__item__link"
-              href="/terapia-floral/"
+              href="./terapia-floral/"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/contacto/"
+            <a class="nav-link main-nav__list__item__link" href="./contacto/"
               >contacto</a
             >
           </li>
@@ -72,12 +72,12 @@
       <h1 class="container d-flex justify-content-center main-content__title">
         Astrotarot Evolutivo
       </h1>
-      <img src="/images/index-img.png" class="index__img" alt="fla bonelli" />
+      <img src="./images/index-img.png" class="index__img" alt="fla bonelli" />
       <h2 class="index__text">
         "como es arriba es abajo, como es adentro es afuera"
       </h2>
       <div class="d-flex justify-content-center">
-        <a href="/contacto/" class="btn btn-md btn-light button--style"
+        <a href="./contacto/" class="btn btn-md btn-light button--style"
           >Agendá tu Sesión</a
         >
       </div>
@@ -89,7 +89,7 @@
             href="https://www.instagram.com/fla.bonelli/?hl=es-la"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/instagram.svg" alt="Instagram" />
+            ><img src="./icons/instagram.svg" alt="Instagram" />
           </a>
         </li>
         <li>
@@ -97,7 +97,7 @@
             href="https://wa.me/541137030255"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/whatsapp.svg" alt="Whatsapp" />
+            ><img src="./icons/whatsapp.svg" alt="Whatsapp" />
           </a>
         </li>
         <li>
@@ -105,7 +105,7 @@
             href="https://www.fiverr.com/flatarot/do-a-tarot-reading-in-just-24hs?utm_campaign=gigs_show&utm_medium=shared&utm_source=copy_link&utm_term=gnev4b"
             class="btn btn-md rrrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/fiverr.svg" alt="Fiverr" />
+            ><img src="./icons/fiverr.svg" alt="Fiverr" />
           </a>
         </li>
       </ul>
@@ -115,6 +115,6 @@
         </ol>
       </nav>
     </footer>
-    <script src="/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
