--- a/astrologia/index.html
+++ b/astrologia/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Astrología</title>
   </head>
   <body>
@@ -39,23 +39,23 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="  main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/index/">Home</a>
+            <a class="nav-link main-nav__list__item__link" href="/index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/tarot/">tarot</a>
+            <a class="nav-link main-nav__list__item__link" href="./tarot/">tarot</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/astrologia/"
+            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/terapia-floral/"
+            <a class="nav-link main-nav__list__item__link" href="./terapia-floral/"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/contacto/">contacto</a>
+            <a class="nav-link main-nav__list__item__link" href="./contacto/">contacto</a>
           </li>
         </ul>
       </div>
@@ -88,7 +88,7 @@
         class="btn btn-md btn-light button--style" 
         rel="nofollow"
             >Calculá tu Carta Natal</a>
-        <a href="/contacto/" class="btn btn-md btn-light button--style"
+        <a href="./contacto/" class="btn btn-md btn-light button--style"
              >Agendá tu Sesión</a
               >
           </div>
@@ -100,7 +100,7 @@
             href="https://www.instagram.com/fla.bonelli/?hl=es-la"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/instagram.svg" alt="Instagram" />
+            ><img src="./icons/instagram.svg" alt="Instagram" />
           </a>
         </li>
         <li>
@@ -108,7 +108,7 @@
             href="https://wa.me/541137030255"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/whatsapp.svg" alt="Whatsapp" />
+            ><img src="./icons/whatsapp.svg" alt="Whatsapp" />
           </a>
         </li>
         <li>
@@ -116,17 +116,17 @@
             href="https://www.fiverr.com/flatarot/do-a-tarot-reading-in-just-24hs?utm_campaign=gigs_show&utm_medium=shared&utm_source=copy_link&utm_term=gnev4b"
             class="btn btn-md rrrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/fiverr.svg" alt="Fiverr" />
+            ><img src="./icons/fiverr.svg" alt="Fiverr" />
           </a>
         </li>
       </ul>
       <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/index/">Home</a></li>
+          <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Astrología</li>
         </ol>
       </nav>
     </footer>
-    <script src="/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
