--- a/contacto/index.html
+++ b/contacto/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Contacto</title>
   </head>
   <body>
@@ -39,29 +39,29 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/index.html"
+            <a class="nav-link main-nav__list__item__link" href="./index.html"
               >Home</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/tarot/"
+            <a class="nav-link main-nav__list__item__link" href="./tarot/"
               >tarot</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/astrologia/"
+            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
             <a
               class="nav-link main-nav__list__item__link"
-              href="/terapia-floral/"
+              href="./terapia-floral/"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/contacto/"
+            <a class="nav-link main-nav__list__item__link" href="./contacto/"
               >contacto</a
             >
           </li>
@@ -156,7 +156,7 @@
             href="https://www.instagram.com/fla.bonelli/?hl=es-la"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/instagram.svg" alt="Instagram" />
+            ><img src="./icons/instagram.svg" alt="Instagram" />
           </a>
         </li>
         <li>
@@ -164,7 +164,7 @@
             href="https://wa.me/541137030255"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/whatsapp.svg" alt="Whatsapp" />
+            ><img src="./icons/whatsapp.svg" alt="Whatsapp" />
           </a>
         </li>
         <li>
@@ -172,17 +172,17 @@
             href="https://www.fiverr.com/flatarot/do-a-tarot-reading-in-just-24hs?utm_campaign=gigs_show&utm_medium=shared&utm_source=copy_link&utm_term=gnev4b"
             class="btn btn-md rrrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/fiverr.svg" alt="Fiverr" />
+            ><img src="./icons/fiverr.svg" alt="Fiverr" />
           </a>
         </li>
       </ul>
       <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/index/">Home</a></li>
+          <li class="breadcrumb-item"><a href="./index/">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Contacto</li>
         </ol>
       </nav>
     </footer>
-    <script src="/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
