--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Fla Bonelli Astrotarot</title>
   </head>
   <body>
