--- a/tarot/index.html
+++ b/tarot/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Tarot</title>
   </head>
   <body>
@@ -39,23 +39,23 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="  main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/index/">Home</a>
+            <a class="nav-link main-nav__list__item__link" href="/index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/tarot/">tarot</a>
+            <a class="nav-link main-nav__list__item__link" href="./tarot/">tarot</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/astrologia/"
+            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/terapia-floral/"
+            <a class="nav-link main-nav__list__item__link" href="./terapia-floral/"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/contacto/">contacto</a>
+            <a class="nav-link main-nav__list__item__link" href="./contacto/">contacto</a>
           </li>
         </ul>
       </div>
@@ -69,39 +69,39 @@
         <div class="fluid-container select-card col-12 col-md-6 align-items-center d-flex justify-content-center">
           <h6 class="select-card__title main-content__title">
             Selecciona una Carta</h6>
-          <a href="/tarot/cards/diablo/" class="select-card__item select-card__item1 ">
+          <a href="./tarot/cards/diablo/" class="select-card__item select-card__item1 ">
           <img class="select-card__item "
-              src="/images/cards/back-card.png"
+              src="./images/cards/back-card.png"
               alt="el diablo"
             />
           </a>
-          <a href="/tarot/cards/torre/" class="select-card__item select-card__item2">          <img
+          <a href="./tarot/cards/torre/" class="select-card__item select-card__item2">          <img
             class="select-card__item "  
-            src="/images/cards/back-card.png"            
+            src="./images/cards/back-card.png"            
             alt="la torre"
           />
         </a>
-        <a href="/tarot/cards/emperatriz/" class="select-card__item select-card__item3">          <img
+        <a href="./tarot/cards/emperatriz/" class="select-card__item select-card__item3">          <img
             class="select-card__item "
-            src="/images/cards/back-card.png"            
+            src="./images/cards/back-card.png"            
             alt="la emperatriz"
           />
         </a>
-        <a href="/tarot/cards/fuerza/" class="select-card__item select-card__item4">          <img
+        <a href="./tarot/cards/fuerza/" class="select-card__item select-card__item4">          <img
             class="select-card__item"
-            src="/images/cards/back-card.png"            
+            src="./images/cards/back-card.png"            
             alt="la fuerza"
           />
         </a>
-        <a href="/tarot/cards/muerte/" class="select-card__item select-card__item5">          <img
+        <a href="./tarot/cards/muerte/" class="select-card__item select-card__item5">          <img
             class="select-card__item"
-            src="/images/cards/back-card.png"            
+            src="./images/cards/back-card.png"            
             alt="la muerte"
           />
         </a>
-        <a href="/tarot/cards/sol/" class="select-card__item select-card__item6">          <img
+        <a href="./tarot/cards/sol/" class="select-card__item select-card__item6">          <img
             class="select-card__item"
-            src="/images/cards/back-card.png"            
+            src="./images/cards/back-card.png"            
             alt="el sol"
           />
         </a>
@@ -109,7 +109,7 @@
       </div>
       </section>
       <div class="d-flex justify-content-center">
-        <a href="/contacto/" class="btn btn-md btn-light button--style"
+        <a href="./contacto/" class="btn btn-md btn-light button--style"
         >Agendá tu Sesión</a
          >
       </div>
@@ -121,7 +121,7 @@
             href="https://www.instagram.com/fla.bonelli/?hl=es-la"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/instagram.svg" alt="Instagram" />
+            ><img src="./icons/instagram.svg" alt="Instagram" />
           </a>
         </li>
         <li>
@@ -129,7 +129,7 @@
             href="https://wa.me/541137030255"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/whatsapp.svg" alt="Whatsapp" />
+            ><img src="./icons/whatsapp.svg" alt="Whatsapp" />
           </a>
         </li>
         <li>
@@ -137,17 +137,17 @@
             href="https://www.fiverr.com/flatarot/do-a-tarot-reading-in-just-24hs?utm_campaign=gigs_show&utm_medium=shared&utm_source=copy_link&utm_term=gnev4b"
             class="btn btn-md rrrss-nav__list__link"
             target="_blank"
-            ><img src="/icons/fiverr.svg" alt="Fiverr" />
+            ><img src="./icons/fiverr.svg" alt="Fiverr" />
           </a>
         </li>
       </ul>
       <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/index/">Home</a></li>
+          <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Tarot</li>
         </ol>
       </nav>
     </footer>
-    <script src="/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
