--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/index.html"
+            <a class="nav-link main-nav__list__item__link" href="index.html"
               >Home</a
             >
           </li>
