--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>404</title>
   </head>
   <body>
@@ -29,7 +29,7 @@
         <div class="col-8 col-lg-6 tarot-cards__image-container">
           <img
             class="tarot-cards__image tarot-cards__image--size"
-            src="/images/cards/el_diablo.png"
+            src="./images/cards/el_diablo.png"
             alt="el diablo"
           />
         </div>
@@ -55,7 +55,7 @@
             </h5>
             <p class="card-text tarot-cards__text">Pagina no encontrada</p>
             <a
-              href="contacto/"
+              href="./contacto/"
               class="btn btn-md btn-light button--style tarot-cards__button"
               >Ir a la Página Principal</a
             >
@@ -64,6 +64,6 @@
       </div>
     </div>
 
-    <script src="/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
