--- a/astrologia/index.html
+++ b/astrologia/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="  main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/index.html">Home</a>
+            <a class="nav-link main-nav__list__item__link" href="./index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
             <a class="nav-link main-nav__list__item__link" href="./tarot/">tarot</a>
@@ -122,7 +122,7 @@
       </ul>
       <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Astrología</li>
         </ol>
       </nav>
