--- a/terapia-floral/index.html
+++ b/terapia-floral/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="/index.html"
+            <a class="nav-link main-nav__list__item__link" href="./index.html"
               >Home</a
             >
           </li>
@@ -151,7 +151,7 @@
       </ul>
       <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">
             Terapia Floral
           </li>
