--- a/404.html
+++ b/404.html
@@ -55,7 +55,7 @@
             </h5>
             <p class="card-text tarot-cards__text">Pagina no encontrada</p>
             <a
-              href="./contacto/"
+              href="./contacto.html"
               class="btn btn-md btn-light button--style tarot-cards__button"
               >Ir a la Página Principal</a
             >
