--- a/astrologia.html
+++ b/astrologia.html
@@ -42,20 +42,20 @@
             <a class="nav-link main-nav__list__item__link" href="./index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot/">tarot</a>
+            <a class="nav-link main-nav__list__item__link" href="./tarot.html">tarot</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
+            <a class="nav-link main-nav__list__item__link" href="./astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./terapia-floral/"
+            <a class="nav-link main-nav__list__item__link" href="./terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto/">contacto</a>
+            <a class="nav-link main-nav__list__item__link" href="./contacto.html">contacto</a>
           </li>
         </ul>
       </div>
@@ -88,7 +88,7 @@
         class="btn btn-md btn-light button--style" 
         rel="nofollow"
             >Calculá tu Carta Natal</a>
-        <a href="./contacto/" class="btn btn-md btn-light button--style"
+        <a href="./contacto.html" class="btn btn-md btn-light button--style"
              >Agendá tu Sesión</a
               >
           </div>
