--- a/tarot.html
+++ b/tarot.html
@@ -42,20 +42,20 @@
             <a class="nav-link main-nav__list__item__link" href="./index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot/">tarot</a>
+            <a class="nav-link main-nav__list__item__link" href="./tarot.html">tarot</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
+            <a class="nav-link main-nav__list__item__link" href="./astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./terapia-floral/"
+            <a class="nav-link main-nav__list__item__link" href="./terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto/">contacto</a>
+            <a class="nav-link main-nav__list__item__link" href="./contacto.html">contacto</a>
           </li>
         </ul>
       </div>
@@ -69,37 +69,37 @@
         <div class="fluid-container select-card col-12 col-md-6 align-items-center d-flex justify-content-center">
           <h6 class="select-card__title main-content__title">
             Selecciona una Carta</h6>
-          <a href="./tarot/cards/diablo/" class="select-card__item select-card__item1 ">
+          <a href="./tarot/cards/diablo.html" class="select-card__item select-card__item1 ">
           <img class="select-card__item "
               src="./images/cards/back-card.png"
               alt="el diablo"
             />
           </a>
-          <a href="./tarot/cards/torre/" class="select-card__item select-card__item2">          <img
+          <a href="./tarot/cards/torre.html" class="select-card__item select-card__item2">          <img
             class="select-card__item "  
             src="./images/cards/back-card.png"            
             alt="la torre"
           />
         </a>
-        <a href="./tarot/cards/emperatriz/" class="select-card__item select-card__item3">          <img
+        <a href="./tarot/cards/emperatriz.html" class="select-card__item select-card__item3">          <img
             class="select-card__item "
             src="./images/cards/back-card.png"            
             alt="la emperatriz"
           />
         </a>
-        <a href="./tarot/cards/fuerza/" class="select-card__item select-card__item4">          <img
+        <a href="./tarot/cards/fuerza.html" class="select-card__item select-card__item4">          <img
             class="select-card__item"
             src="./images/cards/back-card.png"            
             alt="la fuerza"
           />
         </a>
-        <a href="./tarot/cards/muerte/" class="select-card__item select-card__item5">          <img
+        <a href="./tarot/cards/muerte.html" class="select-card__item select-card__item5">          <img
             class="select-card__item"
             src="./images/cards/back-card.png"            
             alt="la muerte"
           />
         </a>
-        <a href="./tarot/cards/sol/" class="select-card__item select-card__item6">          <img
+        <a href="./tarot/cards/sol.html" class="select-card__item select-card__item6">          <img
             class="select-card__item"
             src="./images/cards/back-card.png"            
             alt="el sol"
@@ -109,7 +109,7 @@
       </div>
       </section>
       <div class="d-flex justify-content-center">
-        <a href="./contacto/" class="btn btn-md btn-light button--style"
+        <a href="./contacto.html" class="btn btn-md btn-light button--style"
         >Agendá tu Sesión</a
          >
       </div>
