--- a/cards/fuerza.html
+++ b/cards/fuerza.html
@@ -26,20 +26,20 @@
             <a class="nav-link main-nav__list__item__link" href="./index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot/">tarot</a>
+            <a class="nav-link main-nav__list__item__link" href="tarot.html">tarot</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
+            <a class="nav-link main-nav__list__item__link" href="astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./terapia-floral/"
+            <a class="nav-link main-nav__list__item__link" href="terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto/">contacto</a>
+            <a class="nav-link main-nav__list__item__link" href="contacto.html">contacto</a>
           </li>
         </ul>
       </div>
@@ -47,14 +47,14 @@
     <div class="container justify-content-center card mb-3 tarot-cards__container" style="max-width: 600px;">
         <div class="row g-0 justify-content-center tarot-cards__content">
           <div class="col-8 col-lg-6 tarot-cards__image-container ">
-            <img class="tarot-cards__image tarot-cards__image--size" src="./images/cards/el_sol.png" alt="carta de tarot el sol">
+            <img class="tarot-cards__image tarot-cards__image--size" src="./images/cards/la_fuerza.png" alt="carta de tatot la fuerza">
           </div>
           <div class="col-lg-6">
             <div class="row justify-content-center card-body tarot-cards__text-container">
-              <h5 class="card-title tarot-cards__title d-flex justify-content-center main-content__title">El Sol</h5>
+              <h5 class="card-title tarot-cards__title d-flex justify-content-center main-content__title">La Fuerza</h5>
               <p class="card-text tarot-cards__text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>  
               <div class="d-flex justify-content-center">
-                <a href="./tarot/" class="btn btn-light button--style tarot-cards__button"
+                <a href="./tarot.html" class="btn btn-light button--style tarot-cards__button"
                   >Elegir Otra Carta</a
                 >
               </div>
@@ -64,7 +64,7 @@
       </div>
       
       <div class="d-flex justify-content-center">
-        <a href="./contacto/" class="btn btn-light button--style"
+        <a href="./contacto.html" class="btn btn-light button--style"
           >Agendá tu Sesión</a
         >
       </div>
@@ -99,8 +99,8 @@
       <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-          <li class="breadcrumb-item"><a href="./tarot/">Tarot</a></li>
-          <li class="breadcrumb-item active" aria-current="page">El Sol</li>
+          <li class="breadcrumb-item"><a href="./tarot.html">Tarot</a></li>
+          <li class="breadcrumb-item active" aria-current="page">La Fuerza</li>
         </ol>
       </nav>
     </footer>
