--- a/cards/muerte.html
+++ b/cards/muerte.html
@@ -26,20 +26,20 @@
             <a class="nav-link main-nav__list__item__link" href="./index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot/">tarot</a>
+            <a class="nav-link main-nav__list__item__link" href="./tarot.html">tarot</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
+            <a class="nav-link main-nav__list__item__link" href="./astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./terapia-floral/"
+            <a class="nav-link main-nav__list__item__link" href="./terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto/">contacto</a>
+            <a class="nav-link main-nav__list__item__link" href="./contacto.html">contacto</a>
           </li>
         </ul>
       </div>
@@ -54,7 +54,7 @@
               <h5 class="card-title tarot-cards__title d-flex justify-content-center main-content__title">La Muerte</h5>
               <p class="card-text tarot-cards__text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>  
               <div class="d-flex justify-content-center">
-                <a href="./tarot/" class="btn btn-light button--style tarot-cards__button"
+                <a href="./tarot.html" class="btn btn-light button--style tarot-cards__button"
                   >Elegir Otra Carta</a
                 >
               </div>
@@ -64,7 +64,7 @@
       </div>
       
       <div class="d-flex justify-content-center">
-        <a href="./contacto/" class="btn btn-light button--style"
+        <a href="./contacto.html" class="btn btn-light button--style"
           >Agendá tu Sesión</a
         >
       </div>
@@ -99,7 +99,7 @@
       <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-          <li class="breadcrumb-item"><a href="./tarot/">Tarot</a></li>
+          <li class="breadcrumb-item"><a href="./tarot.html">Tarot</a></li>
           <li class="breadcrumb-item active" aria-current="page">La Muerte</li>
         </ol>
       </nav>
