--- a/contacto.html
+++ b/contacto.html
@@ -44,24 +44,28 @@
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot/"
+            <a class="nav-link main-nav__list__item__link" href="./tarot.html"
               >tarot</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
+            <a
+              class="nav-link main-nav__list__item__link"
+              href="./astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
             <a
               class="nav-link main-nav__list__item__link"
-              href="./terapia-floral/"
+              href="./terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto/"
+            <a
+              class="nav-link main-nav__list__item__link"
+              href="./contacto.html"
               >contacto</a
             >
           </li>
@@ -178,7 +182,7 @@
       </ul>
       <nav style="--bs-breadcrumb-divider: ''" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="./index/">Home</a></li>
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Contacto</li>
         </ol>
       </nav>
