--- a/index.html
+++ b/index.html
@@ -44,24 +44,28 @@
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot/"
+            <a class="nav-link main-nav__list__item__link" href="./tarot.html"
               >tarot</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
+            <a
+              class="nav-link main-nav__list__item__link"
+              href="./astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
             <a
               class="nav-link main-nav__list__item__link"
-              href="./terapia-floral/"
+              href="./terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto/"
+            <a
+              class="nav-link main-nav__list__item__link"
+              href="./contacto.html"
               >contacto</a
             >
           </li>
@@ -77,7 +81,7 @@
         "como es arriba es abajo, como es adentro es afuera"
       </h2>
       <div class="d-flex justify-content-center">
-        <a href="./contacto/" class="btn btn-md btn-light button--style"
+        <a href="./contacto.html" class="btn btn-md btn-light button--style"
           >Agendá tu Sesión</a
         >
       </div>
