--- a/terapia-floral/index.html
+++ b/terapia-floral/index.html
@@ -49,24 +49,28 @@
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot/"
+            <a class="nav-link main-nav__list__item__link" href="./tarot.html"
               >tarot</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia/"
+            <a
+              class="nav-link main-nav__list__item__link"
+              href="./astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
             <a
               class="nav-link main-nav__list__item__link"
-              href="./terapia-floral/"
+              href="./terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto/"
+            <a
+              class="nav-link main-nav__list__item__link"
+              href="./contacto.html"
               >contacto</a
             >
           </li>
@@ -117,7 +121,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <a href="./contacto/" class="btn btn-md btn-light button--style"
+        <a href="./contacto.html" class="btn btn-md btn-light button--style"
           >Agendá tu Sesión</a
         >
       </div>
