--- a/tarot.html
+++ b/tarot.html
@@ -75,31 +75,31 @@
               alt="el diablo"
             />
           </a>
-          <a href="./tarot/cards/torre.html" class="select-card__item select-card__item2">          <img
+          <a href="./cards/torre.html" class="select-card__item select-card__item2">          <img
             class="select-card__item "  
             src="./images/cards/back-card.png"            
             alt="la torre"
           />
         </a>
-        <a href="./tarot/cards/emperatriz.html" class="select-card__item select-card__item3">          <img
+        <a href="./cards/emperatriz.html" class="select-card__item select-card__item3">          <img
             class="select-card__item "
             src="./images/cards/back-card.png"            
             alt="la emperatriz"
           />
         </a>
-        <a href="./tarot/cards/fuerza.html" class="select-card__item select-card__item4">          <img
+        <a href="./cards/fuerza.html" class="select-card__item select-card__item4">          <img
             class="select-card__item"
             src="./images/cards/back-card.png"            
             alt="la fuerza"
           />
         </a>
-        <a href="./tarot/cards/muerte.html" class="select-card__item select-card__item5">          <img
+        <a href="./cards/muerte.html" class="select-card__item select-card__item5">          <img
             class="select-card__item"
             src="./images/cards/back-card.png"            
             alt="la muerte"
           />
         </a>
-        <a href="./tarot/cards/sol.html" class="select-card__item select-card__item6">          <img
+        <a href="./cards/sol.html" class="select-card__item select-card__item6">          <img
             class="select-card__item"
             src="./images/cards/back-card.png"            
             alt="el sol"
