--- a/tarot.html
+++ b/tarot.html
@@ -69,7 +69,7 @@
         <div class="fluid-container select-card col-12 col-md-6 align-items-center d-flex justify-content-center">
           <h6 class="select-card__title main-content__title">
             Selecciona una Carta</h6>
-          <a href="./tarot/cards/diablo.html" class="select-card__item select-card__item1 ">
+          <a href="./cards/diablo.html" class="select-card__item select-card__item1 ">
           <img class="select-card__item "
               src="./images/cards/back-card.png"
               alt="el diablo"
