--- a/cards/diablo.html
+++ b/cards/diablo.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="..x/css/style.css" />
     <title>Flavia Bonelli Astrotarot Evolutivo</title>
   </head>
   <body>
