--- a/cards/diablo.html
+++ b/cards/diablo.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Flavia Bonelli Astrotarot Evolutivo</title>
   </head>
   <body>
@@ -47,7 +47,7 @@
     <div class="container justify-content-center card mb-3 tarot-cards__container" style="max-width: 600px;">
         <div class="row g-0 justify-content-center tarot-cards__content">
           <div class="col-8 col-lg-6 tarot-cards__image-container ">
-            <img class="tarot-cards__image tarot-cards__image--size" src="./images/cards/el_diablo.png" alt="carta de tarot el diablo">
+            <img class="tarot-cards__image tarot-cards__image--size" src="../images/cards/el_diablo.png" alt="carta de tarot el diablo">
           </div>
           <div class="col-lg-6">
             <div class="row justify-content-center card-body tarot-cards__text-container">
