--- a/cards/diablo.html
+++ b/cards/diablo.html
@@ -23,23 +23,23 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="  main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./index.html">Home</a>
+            <a class="nav-link main-nav__list__item__link" href="../index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot.html">tarot</a>
+            <a class="nav-link main-nav__list__item__link" href="../tarot.html">tarot</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia.html"
+            <a class="nav-link main-nav__list__item__link" href="../astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./terapia-floral.html"
+            <a class="nav-link main-nav__list__item__link" href="../terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto.html">contacto</a>
+            <a class="nav-link main-nav__list__item__link" href="../contacto.html">contacto</a>
           </li>
         </ul>
       </div>
@@ -64,7 +64,7 @@
       </div>
       
       <div class="d-flex justify-content-center">
-        <a href="./contacto.html" class="btn btn-light button--style"
+        <a href="../contacto.html" class="btn btn-light button--style"
           >Agendá tu Sesión</a
         >
       </div>
@@ -76,7 +76,7 @@
             href="https://www.instagram.com/fla.bonelli/?hl=es-la"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="./icons/instagram.svg" alt="Instagram" />
+            ><img src="../icons/instagram.svg" alt="Instagram" />
           </a>
         </li>
         <li>
@@ -84,7 +84,7 @@
             href="https://wa.me/541137030255"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="./icons/whatsapp.svg" alt="Whatsapp" />
+            ><img src="../icons/whatsapp.svg" alt="Whatsapp" />
           </a>
         </li>
         <li>
@@ -92,18 +92,18 @@
             href="https://www.fiverr.com/flatarot/do-a-tarot-reading-in-just-24hs?utm_campaign=gigs_show&utm_medium=shared&utm_source=copy_link&utm_term=gnev4b"
             class="btn btn-md rrrss-nav__list__link"
             target="_blank"
-            ><img src="./icons/fiverr.svg" alt="Fiverr" />
+            ><img src="../icons/fiverr.svg" alt="Fiverr" />
           </a>
         </li>
       </ul>
       <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-          <li class="breadcrumb-item"><a href="./tarot.html">Tarot</a></li>
+          <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="../tarot.html">Tarot</a></li>
           <li class="breadcrumb-item active" aria-current="page">El Diablo</li>
         </ol>
       </nav>
     </footer>
-    <script src="./bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
