--- a/cards/diablo.html
+++ b/cards/diablo.html
@@ -54,7 +54,7 @@
               <h5 class="card-title tarot-cards__title d-flex justify-content-center main-content__title">El Diablo</h5>
               <p class="card-text tarot-cards__text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>  
               <div class="d-flex justify-content-center">
-                <a href="./tarot.html" class="btn btn-light button--style tarot-cards__button"
+                <a href="../tarot.html" class="btn btn-light button--style tarot-cards__button"
                   >Elegir Otra Carta</a
                 >
               </div>
