enlaces css en cards

--- a/cards/muerte.html
+++ b/cards/muerte.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Flavia Bonelli Astrotarot Evolutivo</title>
   </head>
   <body>
@@ -23,23 +23,23 @@
       <div class="container">
         <ul class="nav main-nav__list d-flex justify-content-evenly">
           <li class="  main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./index.html">Home</a>
+            <a class="nav-link main-nav__list__item__link" href="../index.html">Home</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot.html">tarot</a>
+            <a class="nav-link main-nav__list__item__link" href="../tarot.html">tarot</a>
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./astrologia.html"
+            <a class="nav-link main-nav__list__item__link" href="../astrologia.html"
               >astrologia</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./terapia-floral.html"
+            <a class="nav-link main-nav__list__item__link" href="../terapia-floral.html"
               >terapia floral</a
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./contacto.html">contacto</a>
+            <a class="nav-link main-nav__list__item__link" href="../contacto.html">contacto</a>
           </li>
         </ul>
       </div>
@@ -47,14 +47,14 @@
     <div class="container justify-content-center card mb-3 tarot-cards__container" style="max-width: 600px;">
         <div class="row g-0 justify-content-center tarot-cards__content">
           <div class="col-8 col-lg-6 tarot-cards__image-container ">
-            <img class="tarot-cards__image tarot-cards__image--size" src="./images/cards/la_muerte.png" alt="carta de tarot la muerte">
+            <img class="tarot-cards__image tarot-cards__image--size" src="../images/cards/la_muerte.png" alt="carta de tarot la muerte">
           </div>
           <div class="col-lg-6">
             <div class="row justify-content-center card-body tarot-cards__text-container">
               <h5 class="card-title tarot-cards__title d-flex justify-content-center main-content__title">La Muerte</h5>
               <p class="card-text tarot-cards__text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>  
               <div class="d-flex justify-content-center">
-                <a href="./tarot.html" class="btn btn-light button--style tarot-cards__button"
+                <a href="../tarot.html" class="btn btn-light button--style tarot-cards__button"
                   >Elegir Otra Carta</a
                 >
               </div>
@@ -64,7 +64,7 @@
       </div>
       
       <div class="d-flex justify-content-center">
-        <a href="./contacto.html" class="btn btn-light button--style"
+        <a href="../contacto.html" class="btn btn-light button--style"
           >Agendá tu Sesión</a
         >
       </div>
@@ -76,7 +76,7 @@
             href="https://www.instagram.com/fla.bonelli/?hl=es-la"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="./icons/instagram.svg" alt="Instagram" />
+            ><img src="../icons/instagram.svg" alt="Instagram" />
           </a>
         </li>
         <li>
@@ -84,7 +84,7 @@
             href="https://wa.me/541137030255"
             class="btn btn-md rrss-nav__list__link"
             target="_blank"
-            ><img src="./icons/whatsapp.svg" alt="Whatsapp" />
+            ><img src="../icons/whatsapp.svg" alt="Whatsapp" />
           </a>
         </li>
         <li>
@@ -92,18 +92,18 @@
             href="https://www.fiverr.com/flatarot/do-a-tarot-reading-in-just-24hs?utm_campaign=gigs_show&utm_medium=shared&utm_source=copy_link&utm_term=gnev4b"
             class="btn btn-md rrrss-nav__list__link"
             target="_blank"
-            ><img src="./icons/fiverr.svg" alt="Fiverr" />
+            ><img src="../icons/fiverr.svg" alt="Fiverr" />
           </a>
         </li>
       </ul>
       <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-          <li class="breadcrumb-item"><a href="./tarot.html">Tarot</a></li>
+          <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="../tarot.html">Tarot</a></li>
           <li class="breadcrumb-item active" aria-current="page">La Muerte</li>
         </ol>
       </nav>
     </footer>
-    <script src="./bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
