--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot.html"
+            <a class="nav-link main-nav__list__item__link" href="./tarotgyetml"
               >tarot</a
             >
           </li>
@@ -119,7 +119,10 @@
         </ol>
       </nav>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
