--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             >
           </li>
           <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarotgyetml"
+            <a class="nav-link main-nav__list__item__link" href="./tarot.html"
               >tarot</a
             >
           </li>
