--- a/contacto.html
+++ b/contacto.html
@@ -143,12 +143,13 @@
               cols="30"
               rows="10"
             ></textarea>
-
-            <input
-              class="btn btn-md btn-light button--style"
-              type="submit"
-              value="Enviar"
-            />
+            <div class="d-flex justify-content-center">
+              <input
+                class="btn btn-light button--style"
+                type="submit"
+                value="Enviar"
+              />
+            </div>
           </form>
         </fieldset>
       </section>
