labels del form

--- a/contacto.html
+++ b/contacto.html
@@ -92,42 +92,43 @@
           </div>
           <form class="input" action="" method="POST" alt="ingreso de datos">
             <div class="input-group">
-              <label for="nombre">Nombre:</label>
+              <label for="nombre"></label>
               <input
                 type="text"
                 id="nombre"
                 name="nombre"
                 required
-                placeholder="escriba aqui"
+                placeholder="Nombre"
               />
             </div>
             <br />
             <div class="input-group">
-              <label for="telefono" class="input-group__label">Telefono:</label>
+              <label for="telefono" class="input-group__label"></label>
               <input
                 type="text"
                 id="telefono"
                 name="telefono"
                 required
-                placeholder="escriba aqui"
+                placeholder="Teléfono"
               />
             </div>
             <br />
             <div class="input-group">
-              <label for="mail" class="input-group__label">Mail:</label> <br />
+              <label for="mail" class="input-group__label"></label> <br />
               <input
                 type="text"
                 id="mail"
                 name="mail"
                 required
-                placeholder="escriba aqui"
+                placeholder="Mail"
               />
             </div>
             <div class="input-group">
               <label for="consulta" class="input-group__label"
-                >Consulta por:</label
+                ></label
               >
               <select name="consulta" id="consulta">
+                <option value="seleccion">Sobre que consultas</option>
                 <option value="tarot">Tarot</option>
                 <option value="astrologia">Astrologia</option>
                 <option value="flores">Terapia Floral</option>
@@ -135,7 +136,7 @@
               </select>
             </div>
 
-            <label for="mensaje" class="input-group__label">Mensaje</label>
+            <label for="mensaje" class="input-group__label">Escribime acá tu mensaje</label>
 
             <textarea
               name="mensaje"
