--- a/contacto.html
+++ b/contacto.html
@@ -136,14 +136,14 @@
               </select>
             </div>
 
-            <label for="mensaje" class="input-group__label">Escribime acá tu mensaje</label>
+            <label for="mensaje" class="input-group__label"></label>
 
             <textarea
               name="mensaje"
               id="mensaje"
               cols="30"
               rows="10"
-            ></textarea>
+            >Escribime acá tu mensaje</textarea>
             <div class="d-flex justify-content-center">
               <input
                 class="btn btn-light button--style"
