--- a/contacto.html
+++ b/contacto.html
@@ -143,7 +143,8 @@
               id="mensaje"
               cols="30"
               rows="10"
-            >Escribime acá tu mensaje</textarea>
+                      placeholder="Escribi aca tu mensaje"
+            ></textarea>
             <div class="d-flex justify-content-center">
               <input
                 class="btn btn-light button--style"
