--- a/contacto.html
+++ b/contacto.html
@@ -128,6 +128,7 @@
                 ></label
               >
               <select name="consulta" id="consulta">
+                placeholder="Que sesion te ineteresa"
                 <option value="seleccion">Sobre que consultas</option>
                 <option value="tarot">Tarot</option>
                 <option value="astrologia">Astrologia</option>
@@ -143,7 +144,7 @@
               id="mensaje"
               cols="30"
               rows="10"
-                      placeholder="Escribi aca tu mensaje"
+              placeholder="Escribi aca tu mensaje"
             ></textarea>
             <div class="d-flex justify-content-center">
               <input
