--- a/contacto.html
+++ b/contacto.html
@@ -128,8 +128,7 @@
                 ></label
               >
               <select name="consulta" id="consulta">
-                placeholder="Que sesion te ineteresa"
-                <option value="seleccion">Sobre que consultas</option>
+                <option value="seleccion">Que sesión te interesa?</option>
                 <option value="tarot">Tarot</option>
                 <option value="astrologia">Astrologia</option>
                 <option value="flores">Terapia Floral</option>
