--- a/contacto.html
+++ b/contacto.html
@@ -37,39 +37,19 @@
         </h2>
       </div>
       <div class="container">
-        <ul class="nav main-nav__list d-flex justify-content-evenly">
-          <li class="main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./index.html"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot.html"
-              >tarot</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a
-              class="nav-link main-nav__list__item__link"
-              href="./astrologia.html"
-              >astrologia</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a
-              class="nav-link main-nav__list__item__link"
-              href="./terapia-floral.html"
-              >terapia floral</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a
-              class="nav-link main-nav__list__item__link"
-              href="./contacto.html"
-              >contacto</a
-            >
-          </li>
-        </ul>
+        <nav>
+          <input type="checkbox" id="toggle" class="toggle">
+          <label for="toggle" class="icon">
+            <span class="hamburguer"></span>
+          </label>
+          <ul class="menu">
+            <li class="menu__item"><a href="./index.html" class="menu__link">Inicio</a></li>
+            <li class="menu__item"><a href="./tarot.html" class="menu__link">Tarot</a></li>
+            <li class="menu__item"><a href="./astrologia.html" class="menu__link">Astrología</a></li>
+            <li class="menu__item"><a href="./terapia-floral.html" class="menu__link">Terapia Floral</a></li>
+            <li class="menu__item"><a href="./contacto.html" class="menu__link">Contacto</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
