--- a/cards/sol.html
+++ b/cards/sol.html
@@ -16,32 +16,24 @@
   <body>
     <header class="main-nav">
       <div class="container main-nav__logo">
-        <h1 class="row justify-content-center main-nav__logo__logo-text">
+        <h2 class="row justify-content-center main-nav__logo__logo-text">
           Fla Bonelli
-        </h1>
+        </h2>
       </div>
       <div class="container">
-        <ul class="nav main-nav__list d-flex justify-content-evenly">
-          <li class="  main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="../tarot.html">tarot</a>
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="../astrologia.html"
-              >astrologia</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="../terapia-floral.html"
-              >terapia floral</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="../contacto.html">contacto</a>
-          </li>
-        </ul>
+        <nav>
+          <input type="checkbox" id="toggle" class="toggle">
+          <label for="toggle" class="icon">
+            <span class="hamburguer"></span>
+          </label>
+          <ul class="menu">
+            <li class="menu__item"><a href="../index.html" class="menu__link">Inicio</a></li>
+            <li class="menu__item"><a href="../tarot.html" class="menu__link">Tarot</a></li>
+            <li class="menu__item"><a href="../astrologia.html" class="menu__link">Astrología</a></li>
+            <li class="menu__item"><a href="../terapia-floral.html" class="menu__link">Terapia Floral</a></li>
+            <li class="menu__item"><a href="../contacto.html" class="menu__link">Contacto</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <div class="container justify-content-center card mb-3 tarot-cards__container" style="max-width: 600px;">
