--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Fla Bonelli Astrotarot</title>
   </head>
-  <body>
+  <body>    
     <header class="main-nav">
       <div class="container main-nav__logo">
         <h2 class="row justify-content-center main-nav__logo__logo-text">
@@ -37,41 +37,22 @@
         </h2>
       </div>
       <div class="container">
-        <ul class="nav main-nav__list d-flex justify-content-evenly">
-          <li class="main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./index.html"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a class="nav-link main-nav__list__item__link" href="./tarot.html"
-              >tarot</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a
-              class="nav-link main-nav__list__item__link"
-              href="./astrologia.html"
-              >astrologia</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a
-              class="nav-link main-nav__list__item__link"
-              href="./terapia-floral.html"
-              >terapia floral</a
-            >
-          </li>
-          <li class="nav-item main-nav__list__item">
-            <a
-              class="nav-link main-nav__list__item__link"
-              href="./contacto.html"
-              >contacto</a
-            >
-          </li>
-        </ul>
+        <nav>
+          <input type="checkbox" id="toggle" class="toggle">
+          <label for="toggle" class="icon">
+            <span class="hamburguer"></span>
+          </label>
+          <ul class="menu">
+            <li class="menu__item"><a href="./index.html" class="menu__link">Inicio</a></li>
+            <li class="menu__item"><a href="./tarot.html" class="menu__link">Tarot</a></li>
+            <li class="menu__item"><a href="./astrologia.html" class="menu__link">Astrología</a></li>
+            <li class="menu__item"><a href="./terapia-floral.html" class="menu__link">Terapia Floral</a></li>
+            <li class="menu__item"><a href="./contacto.html" class="menu__link">Contacto</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
+     
     <main class="index d-flex flex-column justify-content-center">
       <h1 class="container d-flex justify-content-center main-content__title">
         Astrotarot Evolutivo
