Agregado de textos

--- a/astrologia.html
+++ b/astrologia.html
@@ -53,15 +53,13 @@
       </div>
     </header>
   <main class="main-content justify-content-center">
-        <h1 class="container d-flex justify-content-center main-content__title">Astrología</h1>
+        <h1 class="container d-flex justify-content-center main-content__title">Astrología</h1> 
       <div class="container flex-wrap d-flex justify-content-center main-content__text-container">
         <p class="text-center text-light text-justify texto col-12 col-lg-6 main-content__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, tenetur.
-        Sit, officiis. Tempora officiis nihil at esse autem officia voluptates
-        facilis adipisci placeat beatae perferendis facere reprehenderit
-        consectetur, earum, asperiores molestias quidem ut perspiciatis
-        aspernatur magni quaerat ducimus quo nam numquam! Ipsam laudantium
-        praesentium inventore!
+            Nuestra Carta Natal es el mapa del cielo en el momento en que nacemos. <br>
+            Cuanto más nos adentramos a investigarla, más podemos comprendernos y evolucionar. <br>
+            Mi luna en Escorpio me llevó amar la Astrologia desde pequeña y hoy disfruto mucho de poder ayudar a otros a conocerse a través de la lectura de sus cartas natales. <br>
+            Te invito a que calcules tu carta natal y me contactes para que puedas conocer todo eso que se oculta en tu ser.
       </p>
       <div id="carouselExampleSlidesOnly" class="carousel slide col-12 col-lg-6 carrusel" data-bs-ride="carousel">
         <div class="carousel-inner">
