--- a/cards/diablo.html
+++ b/cards/diablo.html
@@ -44,7 +44,7 @@
           <div class="col-lg-6">
             <div class="row justify-content-center card-body tarot-cards__text-container">
               <h5 class="card-title tarot-cards__title d-flex justify-content-center main-content__title">El Diablo</h5>
-              <p class="card-text tarot-cards__text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>  
+              <p class="card-text tarot-cards__text">Tenés la posibilidad de conseguir lo que querés pero tené cuidado, el fin no justifica los medios.</p>  
               <div class="d-flex justify-content-center">
                 <a href="../tarot.html" class="btn btn-light button--style tarot-cards__button"
                   >Elegir Otra Carta</a
