--- a/tarot.html
+++ b/tarot.html
@@ -56,7 +56,11 @@
         <h1 class="container d-flex justify-content-center main-content__title">Tarot</h1>
       <div class="container flex-wrap d-flex justify-content-center main-content__text-container">
         <p class="text-center text-light text-justify texto col-12 col-lg-6 main-content__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis et provident quibusdam cumque deserunt eveniet facere corrupti laudantium adipisci quam ipsam illo, delectus non unde nostrum eaque labore a nobis modi quasi nihil tempora tempore quia! Sequi, perspiciatis! Atque obcaecati harum cum a laudantium eligendi voluptatum repellat tempore, repudiandae, beatae distinctio omnis autem dicta hic consequuntur officia? Culpa necessitatibus ab tenetur expedita atque fuga tempore illum sequi totam impedit voluptates, labore modi, voluptatibus ipsa vero. Facere ullam perspiciatis animi incidunt, autem ipsam necessitatibus hic officia, modi tempora doloribus dolorem consequuntur atque quos. Tempore modi velit, nulla aperiam quibusdam debitis sint.
+El Tarot es uno de los oráculos más antiguos que existen. <br>
+Se puede trabajar tanto de forma predictiva, como se hacía en la antigüedad, como de forma evolutiva que es lo que mas me gusta. <br>
+El Tarot Evolutivo apunta a leer las energias presentes y las opciones que tenemos para tomar. <br>
+Busca el crecimiento emocional, personal y espiritual de cada uno. Nos hace responsables de nuestras acciones y desiciones. <br>
+Elegí una carta y descubrí que tiene para decirte el Tarot y te invito a que contactes para que podamos hacer una lectura más profunda y te saques todas esas dudas que hoy tenes.
       </p>
         <div class="fluid-container select-card col-12 col-md-6 align-items-center d-flex justify-content-center">
           <h6 class="select-card__title main-content__title">
