--- a/terapia-floral.html
+++ b/terapia-floral.html
@@ -62,8 +62,7 @@
         Terapia Floral
       </h1>
       <div
-        class="
-          container
+        class="container
           flex-wrap
           d-flex
           justify-content-center
@@ -71,19 +70,16 @@
         "
       >
         <p
-          class="
+          class="container
             text-center text-light text-justify
             texto
             col-12 col-lg-6
             main-content__text
           "
         >
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
-          tenetur. Sit, officiis. Tempora officiis nihil at esse autem officia
-          voluptates facilis adipisci placeat beatae perferendis facere
-          reprehenderit consectetur, earum, asperiores molestias quidem ut
-          perspiciatis aspernatur magni quaerat ducimus quo nam numquam! Ipsam
-          laudantium praesentium inventore!
+         El los años 30 el Dr. Bach descubrió que habia ciertas flores y plantas que podian aliviar o contrarrestar diferentes problemas de índole emocional como miedo, angustia, ira, incertidumbre, etc. <br>
+         Las flores trabajan sobre lo sutil y vibracional, no suprimen lo que sentís sino que ayudan a equilibrarlo y no reemplazan tratamientos médicos sino que los complementan. <br>
+         Te invito a que me contactes y puedas tener una sesión que te ayude al autoconocimiento y reconocer que necesitas en este momento. <br>
         </p>
         <div
           class="
