formato de contacto

--- a/astrologia.html
+++ b/astrologia.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="./icons/page-icon.svg"
+  />
     <meta
       name="description"
       content="Calculá tu carta natal y agenda tu sesion para una lectura personalizada"
