--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./icons/page-icon.svg"
+    />
     <meta
       name="description"
       content="Astrología, Tarot, Terapia Floral y otras Mancias. Sesiones personalizadas on-line"
@@ -29,7 +35,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Fla Bonelli Astrotarot</title>
   </head>
-  <body>    
+  <body>
     <header class="main-nav">
       <div class="container main-nav__logo">
         <h2 class="row justify-content-center main-nav__logo__logo-text">
@@ -38,21 +44,33 @@
       </div>
       <div class="container">
         <nav>
-          <input type="checkbox" id="toggle" class="toggle">
+          <input type="checkbox" id="toggle" class="toggle" />
           <label for="toggle" class="icon">
             <span class="hamburguer"></span>
           </label>
           <ul class="menu">
-            <li class="menu__item"><a href="./index.html" class="menu__link">Inicio</a></li>
-            <li class="menu__item"><a href="./tarot.html" class="menu__link">Tarot</a></li>
-            <li class="menu__item"><a href="./astrologia.html" class="menu__link">Astrología</a></li>
-            <li class="menu__item"><a href="./terapia-floral.html" class="menu__link">Terapia Floral</a></li>
-            <li class="menu__item"><a href="./contacto.html" class="menu__link">Contacto</a></li>
+            <li class="menu__item">
+              <a href="./index.html" class="menu__link">Inicio</a>
+            </li>
+            <li class="menu__item">
+              <a href="./tarot.html" class="menu__link">Tarot</a>
+            </li>
+            <li class="menu__item">
+              <a href="./astrologia.html" class="menu__link">Astrología</a>
+            </li>
+            <li class="menu__item">
+              <a href="./terapia-floral.html" class="menu__link"
+                >Terapia Floral</a
+              >
+            </li>
+            <li class="menu__item">
+              <a href="./contacto.html" class="menu__link">Contacto</a>
+            </li>
           </ul>
         </nav>
       </div>
     </header>
-     
+
     <main class="index d-flex flex-column justify-content-center">
       <h1 class="container d-flex justify-content-center main-content__title">
         Astrotarot Evolutivo
