--- a/terapia-floral.html
+++ b/terapia-floral.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./icons/page-icon.svg"
+    />
     <meta
       name="description"
       content="Conoce como la terapia floral puede ayudarte y agenda tu sesion para empezar hoy mismo"
@@ -43,16 +49,28 @@
       </div>
       <div class="container">
         <nav>
-          <input type="checkbox" id="toggle" class="toggle">
+          <input type="checkbox" id="toggle" class="toggle" />
           <label for="toggle" class="icon">
             <span class="hamburguer"></span>
           </label>
           <ul class="menu">
-            <li class="menu__item"><a href="./index.html" class="menu__link">Inicio</a></li>
-            <li class="menu__item"><a href="./tarot.html" class="menu__link">Tarot</a></li>
-            <li class="menu__item"><a href="./astrologia.html" class="menu__link">Astrología</a></li>
-            <li class="menu__item"><a href="./terapia-floral.html" class="menu__link">Terapia Floral</a></li>
-            <li class="menu__item"><a href="./contacto.html" class="menu__link">Contacto</a></li>
+            <li class="menu__item">
+              <a href="./index.html" class="menu__link">Inicio</a>
+            </li>
+            <li class="menu__item">
+              <a href="./tarot.html" class="menu__link">Tarot</a>
+            </li>
+            <li class="menu__item">
+              <a href="./astrologia.html" class="menu__link">Astrología</a>
+            </li>
+            <li class="menu__item">
+              <a href="./terapia-floral.html" class="menu__link"
+                >Terapia Floral</a
+              >
+            </li>
+            <li class="menu__item">
+              <a href="./contacto.html" class="menu__link">Contacto</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -62,7 +80,8 @@
         Terapia Floral
       </h1>
       <div
-        class="container
+        class="
+          container
           flex-wrap
           d-flex
           justify-content-center
@@ -70,16 +89,22 @@
         "
       >
         <p
-          class="container
+          class="
+            container
             text-center text-light text-justify
             texto
             col-12 col-lg-6
             main-content__text
           "
         >
-         El los años 30 el Dr. Bach descubrió que habia ciertas flores y plantas que podian aliviar o contrarrestar diferentes problemas de índole emocional como miedo, angustia, ira, incertidumbre, etc. <br>
-         Las flores trabajan sobre lo sutil y vibracional, no suprimen lo que sentís sino que ayudan a equilibrarlo y no reemplazan tratamientos médicos sino que los complementan. <br>
-         Te invito a que me contactes y puedas tener una sesión que te ayude al autoconocimiento y reconocer que necesitas en este momento. <br>
+          El los años 30 el Dr. Bach descubrió que habia ciertas flores y
+          plantas que podian aliviar o contrarrestar diferentes problemas de
+          índole emocional como miedo, angustia, ira, incertidumbre, etc. <br />
+          Las flores trabajan sobre lo sutil y vibracional, no suprimen lo que
+          sentís sino que ayudan a equilibrarlo y no reemplazan tratamientos
+          médicos sino que los complementan. <br />
+          Te invito a que me contactes y puedas tener una sesión que te ayude al
+          autoconocimiento y reconocer que necesitas en este momento. <br />
         </p>
         <div
           class="
