--- a/tarot.html
+++ b/tarot.html
@@ -61,7 +61,7 @@
   <main class="main-content justify-content-center">
         <h1 class="container d-flex justify-content-center main-content__title">Tarot</h1>
       <div class="container flex-wrap d-flex justify-content-center main-content__text-container">
-        <p class="text-center text-light text-justify texto col-12 col-lg-6 main-content__text">
+        <p class="text-center text-light text-justify texto col-12 col-lg-6 pt-lg-5 main-content__text">
 El Tarot es uno de los oráculos más antiguos que existen. <br>
 Se puede trabajar tanto de forma predictiva, como se hacía en la antigüedad, como de forma evolutiva que es lo que mas me gusta. <br>
 El Tarot Evolutivo apunta a leer las energias presentes y las opciones que tenemos para tomar. <br>
@@ -70,7 +70,7 @@ Elegí una carta y descubrí que tiene para decirte el Tarot y te invito a que c
       </p>
         <div class="fluid-container select-card col-12 col-md-6 align-items-center d-flex justify-content-center">
           <h6 class="select-card__title main-content__title">
-            Selecciona una Carta</h6>
+           Elegí una Carta</h6>
           <a href="./cards/diablo.html" class="select-card__item select-card__item1 ">
           <img class="select-card__item "
               src="./images/cards/back-card.png"
